<resources>
    <string name="app_name">Calculadora</string>
    <string name="apagadigito">&#60;</string>
    <string name="apaganumero">C</string>
    <string name="nove">9</string>
    <string name="oito">8</string>
    <string name="sete">7</string>
    <string name="seis">6</string>
    <string name="cinco">5</string>
    <string name="quatro">4</string>
    <string name="tres">3</string>
    <string name="dois">2</string>
    <string name="um">1</string>
    <string name="zero">0</string>
    <string name="multiplica">x</string>
    <string name="divide">/</string>
    <string name="soma">+</string>
    <string name="subtrai">-</string>
    <string name="ponto">.</string>
    <string name="atribui">=</string>
    <string name="parenteses">()</string>
    <string name="percentual">%</string>
</resources>